[package]
name = "burn2play"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2021"

[package.metadata.ink-lang]
abi = "all"

[dependencies]
ink = { git = "https://github.com/use-ink/ink", default-features = false, features = ["unstable-hostfn"] }

[dev-dependencies]
ink_e2e = "6.0.0-alpha"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
]
ink-as-dependency = []
e2e-tests = []
